# MonoExample

./: .gitignore  CMakeLists.txt
csharp/: HelloWorldClass.cs
include/: mono_util.h
src/: main.cc  main.cpp  mono_util.cc
